@@ -1,3 +1,11 @@
+2004-09-22  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs.el:
+	(set-scroll-margin): do not scroll in *Calendar*
+
+	* dotemacs-cust.el:
+	(custom-set-variables): do not hl-line in *Calendar*
+
 2004-09-20  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/planner-config.el:
